# cortex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  design.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: README.md  package-lock.json  package.json  tailwind.config.js
app/src/: App.css  App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/migrations/: 001_initial_schema.sql  002_disable_fts_triggers.sql  003_add_article_ai_fields.sql  004_add_feed_source_fields.sql  009_cleanup_legacy_features.sql  011_add_article_ai_analyses.sql
app/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
app/src-tauri/src/services/: ai_service.rs  content_service.rs  feed_service.rs  mod.rs  web_source_service.rs
app/src/components/ui/: button.tsx
app/src/store/: useDataStore.ts
docs/: language-workflow.md
logs/: english-progress.md
prompts/: session-kickoff.txt
